--- a/Game-Website(CSS).css
+++ b/Game-Website(CSS).css
@@ -2,6 +2,6 @@ body {
     background-color: rgb(20, 20, 20);
 }
 h1 {
-    font-family: Sofia;
+    font-family: "Sofia";
     color: rgb(255, 255, 255);
 }
