--- a/Game-Website(CSS).css
+++ b/Game-Website(CSS).css
@@ -1,6 +1,6 @@
 body {
     background-color: rgb(20, 20, 20);
-    font-family: "Sofia";
+    font-family: 'Ropa Sans', sans-serif;
 }
 h1 {
     color: rgb(255, 255, 255);
