--- a/Game-Website(CSS).css
+++ b/Game-Website(CSS).css
@@ -1,6 +1,7 @@
 body {
     background-color: rgb(20, 20, 20);
     font-family: 'Ropa Sans', sans-serif;
+    right: 50%;
 }
 h1 {
     color: rgb(255, 255, 255);
