--- a/Game-Website(CSS).css
+++ b/Game-Website(CSS).css
@@ -5,7 +5,6 @@ body {
 h1 {
     position: absolute;
     color: rgb(255, 255, 255);
-    width: 100%;
     text-align: center;
-    font-size: large;
+    font-size: x-large;
 }
