--- a/Game-Website(CSS).css
+++ b/Game-Website(CSS).css
@@ -6,5 +6,5 @@ h1 {
     position: absolute;
     color: rgb(255, 255, 255);
     text-align: center;
-    font-size: x-large;
+    font-size: 72px;
 }
