--- a/Game-Website(CSS).css
+++ b/Game-Website(CSS).css
@@ -5,6 +5,7 @@ body {
 h1 {
     position: absolute;
     color: rgb(255, 255, 255);
+    right: 50%;
     text-align: center;
-    font-size: 72px;
+    font-size: 48px;
 }
