--- a/Game-Website(CSS).css
+++ b/Game-Website(CSS).css
@@ -3,9 +3,11 @@ body {
     font-family: 'Ropa Sans', sans-serif;
 }
 h1 {
-    position: absolute;
+    position: relative;
     color: rgb(255, 255, 255);
-    right: 50%;
+    width: auto;
     text-align: center;
-    font-size: 48px;
+    font-size: 56px;
+    letter-spacing: 1px;
+    text-shadow: 4px 4px rgb(50, 50, 50);
 }
