--- a/Game-Website(CSS).css
+++ b/Game-Website(CSS).css
@@ -7,7 +7,17 @@ h1 {
     color: rgb(255, 255, 255);
     width: auto;
     text-align: center;
-    font-size: 56px;
+    font-size: 62px;
     letter-spacing: 1px;
     text-shadow: 4px 4px rgb(50, 50, 50);
+}
+h2 {
+    position: relative;
+    color: rgb(255, 255, 255);
+    width: auto;
+    top: 25px;
+    text-align: center;
+    font-size: 24px;
+    letter-spacing: 1px;
+    text-decoration: underline rgb(255, 255, 255);
 }
