--- a/Game-Website(CSS).css
+++ b/Game-Website(CSS).css
@@ -3,21 +3,26 @@ body {
     font-family: 'Ropa Sans', sans-serif;
 }
 h1 {
-    position: relative;
     color: rgb(255, 255, 255);
-    width: auto;
-    text-align: center;
-    font-size: 62px;
+    font-size: 76px;
     letter-spacing: 1px;
     text-shadow: 4px 4px rgb(50, 50, 50);
 }
 h2 {
-    position: relative;
     color: rgb(255, 255, 255);
-    width: auto;
-    top: 25px;
-    text-align: center;
-    font-size: 24px;
+    font-size: 40px;
+    letter-spacing: 1px;
+    text-shadow: 4px 4px rgb(50, 50, 50);
+}
+h3 {
+    color: rgb(255, 255, 255);
+    font-size: 30px;
     letter-spacing: 1px;
     text-decoration: underline rgb(255, 255, 255);
+}
+h4 {
+    color: rgb(255, 255, 255);
+    font-size: 32px;
+    letter-spacing: 1px;
+    text-shadow: 3px 3px rgb(50, 50, 50);
 }
