--- a/Game-Website(CSS).css
+++ b/Game-Website(CSS).css
@@ -37,3 +37,10 @@ h5 {
     letter-spacing: 1px;
     text-shadow: 2px 2px rgb(50, 50, 50);
 }
+h3:link, h3:visited {
+    color: rgb(255, 255, 255);
+  }
+  
+  h3:hover, h3:active {
+    color: rgb(200, 200, 200);
+  }
